Don't leak WebLocalFrame in print preview.

Unfortunately, Blink currently relies on the embedder to make sure these
objects don't leak.

Bug: 735860
Change-Id: Ib6cd6a39e8b18d1ec694d0c414a82f2202ee336d