third_party/WebKit/Source/web/LocalFrameClientImpl.cpp
@@ -354,6 +354,10 @@ void LocalFrameClientImpl::Detached(FrameDetachType type) {
 
   client->FrameDetached(web_frame_,
                         static_cast<WebFrameClient::DetachType>(type));
+  DCHECK_EQ(nullptr, web_frame_->FrameWidget());
+#if DCHECK_IS_ON()
+  web_frame_->AssertWasClosed();
+#endif
 
   if (type == FrameDetachType::kRemove)
     web_frame_->DetachFromParent();
